[project]
name = "jerry-s-game"
version = "0.1.0"
description = ""
authors = [
    {name = "Denis",email = "denisgulyar@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "black (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8-bugbear = "^24.12.12"
pep8-naming = "^0.15.1"

